[WEBUI] Top Menu - Re apply change on it to fix it on top (only if not phone), collapse behaviour on phone, sub menu on phone.

--- a/plugins/webui-plugin/client/app/styles/mediamanager.less
+++ b/plugins/webui-plugin/client/app/styles/mediamanager.less
@@ -8,6 +8,9 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
   margin-bottom: 100px;
+  @media (min-width: @screen-sm-min) {
+    margin-top: 50px;
+  }
 }
 
 a, .link {
